<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>


	<groupId>org.aroundthecode.pathfinder</groupId>
	<artifactId>pathfinder</artifactId>
	<version>0.1.0-SNAPSHOT</version>
	<packaging>pom</packaging>


	<name>Pathfinder  - ${project.groupId}:${project.artifactId}:${project.packaging}</name>
	<description>Pathfinder project parent</description>
	<url>https://github.com/aroundthecode/pathfinder</url>

	<organization>
		<name>AroundTheCode</name>
		<url>http://aroundthecode.org</url>
	</organization>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<comments>Please check https://github.com/aroundthecode/pathfinder/wiki/Licensing for more details</comments>
		</license>
	</licenses>

	<developers>
		<developer>
			<email>michele dot sacchetti at aroundthecode dot org</email>
			<name>Michele Sacchetti</name>
			<url>https://aroundthecode.org</url>
			<id>aroundthecode</id>
		</developer>
	</developers>

	<scm>
		<url>https://github.com/aroundthecode/pathfinder</url>
		<connection>scm:git:git://github.com/aroundthecode/pathfinder.git</connection>
		<developerConnection>scm:git:git@github.com:aroundthecode/pathfinder.git</developerConnection>
	</scm>

	<issueManagement>
		<url>https://github.com/aroundthecode/pathfinder/issues</url>
		<system>GitHub Issues</system>
	</issueManagement>

	<properties>
		<java.version>1.7</java.version>
		<sonar.java.source>1.7</sonar.java.source>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring.boot.version>1.3.1.RELEASE</spring.boot.version>
		<neo4j.version>2.2.7</neo4j.version>
		<neo4j.ogm.version>1.1.2</neo4j.ogm.version>

		<!-- Jacoco version to use -->
		<jacoco.version>0.7.6.201602180812</jacoco.version>
		<jacoco.outputDir>../target/jacoco</jacoco.outputDir>
		<!-- Jacoco output file for UTs -->
		<jacoco.out.ut.file>jacoco-ut.exec</jacoco.out.ut.file>
		<!-- Tells Sonar Jacoco coverage result file location for Unit Tests -->
		<jacoco.reportPath>${jacoco.outputDir}/${jacoco.out.ut.file}</jacoco.reportPath>
		<!-- Jacoco output file for ITs -->
		<jacoco.out.it.file>jacoco-it.exec</jacoco.out.it.file>
		<!-- Tells Sonar Jacoco coverage result file location for Integration Tests -->
		<jacoco.itReportPath>${jacoco.outputDir}/${jacoco.out.it.file}</jacoco.itReportPath>

		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
		<sonar.jacoco.itReportPath>../target/jacoco/jacoco-it.exec</sonar.jacoco.itReportPath>
		<sonar.jacoco.reportPath>../target/jacoco/jacoco-ut.exec</sonar.jacoco.reportPath>

		<surefire.extraargs></surefire.extraargs>
		<failsafe.extraargs></failsafe.extraargs>

		<!-- main server port -->
		<server.port>8080</server.port>
		<neo4j.port>${server.port}</neo4j.port>

		<!-- instance also neo4j server -->
		<neo4j.db.enable>false</neo4j.db.enable>
		<!-- port for neo4j server server port -->
		<neo4j.db.port>8686</neo4j.db.port>
		<!-- host for neo4j server server -->
		<neo4j.host>localhost</neo4j.host>
		<!-- credentials neo4j server server -->
		<neo4j.user>neo4j</neo4j.user>
		<neo4j.pass>password</neo4j.pass>

	</properties>



	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>3.6.0.1398</version>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco.version}</version>
					<configuration>
						<destFile>${sonar.jacoco.itReportPath}</destFile>
						<propertyName>jacoco.agent.it.arg</propertyName>
						<append>true</append>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.12.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>2.12.1</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>2.6</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.7</version>
				</plugin>

				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<version>${spring.boot.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>1.8</version>
				</plugin>


			</plugins>
		</pluginManagement>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-Xmx1G -XX:+UseConcMarkSweepGC
						-XX:+CMSClassUnloadingEnabled ${jacoco.agent.ut.arg}
						${surefire.extraargs}</argLine>
					<excludes>
						<exclude>**/*IntegrationTest*</exclude>
					</excludes>
				</configuration>
			</plugin>

			<!-- exclude Unit test from integration phase -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<argLine>-Xmx1G -XX:+UseConcMarkSweepGC
						-XX:+CMSClassUnloadingEnabled ${jacoco.agent.it.arg}
						${failsafe.extraargs}</argLine>
					<includes>
						<include>**/*IntegrationTest*</include>
					</includes>
					<reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<executions>
					<!-- Prepares a variable, jacoco.agent.ut.arg, that contains the info 
						to be passed to the JVM hosting the code being tested. -->
					<execution>
						<id>prepare-ut-agent</id>
						<phase>process-test-classes</phase>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<destFile>${sonar.jacoco.reportPath}</destFile>
							<propertyName>jacoco.agent.ut.arg</propertyName>
							<append>true</append>
						</configuration>
					</execution>
					<!-- Prepares a variable, jacoco.agent.it.arg, that contains the info 
						to be passed to the JVM hosting the code being tested. -->
					<execution>
						<id>prepare-it-agent</id>
						<!-- moved to package phase to be sure all pre-integration test have 
							it already set to bring up environments with jacoco agent as JVM params -->
						<phase>package</phase>
						<goals>
							<goal>prepare-agent-integration</goal>
						</goals>
						<configuration>
							<destFile>${sonar.jacoco.itReportPath}</destFile>
							<propertyName>jacoco.agent.it.arg</propertyName>
							<append>true</append>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
<!--
		<repository>
			<id>spring-releases</id>
			<name>Spring Releases</name>
			<url>https://repo.spring.io/libs-release</url>
		</repository>
		<repository>
			<id>spring-plugins-releases</id>
			<name>Spring Plugins Releases</name>
			<url>https://repo.spring.io/plugins-release/</url>
		</repository>
-->
		<repository>
			<id>maven-0</id>
			<name>Maven0</name>
			<url>https://repo.maven.apache.org/maven2/</url>
		</repository>
		<repository>
        <id>xebialabs-releases</id>          
      <url>https://plugins.xebialabs.com/nexus/content/groups/public/</url>
        <snapshots>
            <enabled>true</enabled>
        </snapshots>
    </repository>
		<repository>
			<id>maven</id>
			<name>Maven</name>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
		 
	</repositories>


	<profiles>
		<profile>
			<id>full-build</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<modules>
				<module>pathfinder-maven-plugin</module>
				<module>pathfinder-server</module>
				<module>pathfinder-rest-client</module>
				<module>pathfinder-web</module>
				<module>remoteapiinvoker</module>
			</modules>
		</profile>

		<!-- No-modules build -->
		<profile>
			<id>openshift</id>
			<modules>
				<module>pathfinder-server</module>
				<module>pathfinder-rest-client</module>
				<module>pathfinder-web</module>
				<module>remoteapiinvoker</module>
			</modules>
		</profile>
	</profiles>


</project>
